@@ -31,11 +31,14 @@ HREF="overview.html">"Overview of CUPS"</A> document instead.</P>
 		SSL-encrypted, and TLS-encrypted connections over
 		a single port</LI>
 
+		<LI><EM>Network Printer Discovery;</EM> CUPS can
+		now find printers on the LAN using SNMP</LI>
+
 	</OL></DD>
 
 
 	<DT>Browsing</DT>
-	<DD><OL START="4">
+	<DD><OL START="5">
 
 		<LI><EM>LDAP Support;</EM> CUPS now supports
 		printer sharing via the Lightweight Directory
@@ -76,7 +79,7 @@ HREF="overview.html">"Overview of CUPS"</A> document instead.</P>
 
 
 	<DT>Web Interface</DT>
-	<DD><OL START="11">
+	<DD><OL START="12">
 
 		<LI><EM>Improved Look and Feel;</EM> The web
 		interface has improved readability and a more
@@ -169,7 +172,7 @@ HREF="overview.html">"Overview of CUPS"</A> document instead.</P>
 
 
 	<DT>IPP Support</DT>
-	<DD><OL START="30"></EM></LI>
+	<DD><OL START="31"></EM></LI>
 
 		<LI><EM>IPP Notifications;</EM> CUPS now supports
 		the complete IPP notification specification to
@@ -269,7 +272,7 @@ HREF="overview.html">"Overview of CUPS"</A> document instead.</P>
 
 
 	<DT>Scheduler</DT>
-	<DD><OL START="48">
+	<DD><OL START="49">
 
 		<LI><EM>Remote Printer Caching;</EM> The scheduler
 		now maintains a remote printer cache so that
@@ -376,7 +379,7 @@ HREF="overview.html">"Overview of CUPS"</A> document instead.</P>
 
 
 	<DT>LPD Client Support</DT>
-	<DD><OL START="68">
+	<DD><OL START="69">
 
 		<LI><EM>Performance Improvements;</EM> CUPS no
 		longer loads every available printer before
@@ -393,7 +396,7 @@ HREF="overview.html">"Overview of CUPS"</A> document instead.</P>
 
 
 	<DT>Localization and Internationalization</DT>
-	<DD><OL START="71">
+	<DD><OL START="72">
 
 		<LI><EM>Command-Line Programs;</EM> All
 		command-line programs are now fully
@@ -411,7 +414,7 @@ HREF="overview.html">"Overview of CUPS"</A> document instead.</P>
 
 
 	<DT>Printer Drivers</DT>
-	<DD><OL START="74">
+	<DD><OL START="75">
 
 		<LI><EM>New Drivers;</EM> CUPS 1.2 adds Zebra
 		CPCL and EPL label printer drivers</LI>
@@ -446,7 +449,7 @@ HREF="overview.html">"Overview of CUPS"</A> document instead.</P>
 
 
 	<DT>CUPS API</DT>
-	<DD><OL START="81">
+	<DD><OL START="82">
 
 		<LI><EM>Thread Safety;</EM> All of the CUPS API
 		is now thread-safe on systems that support POSIX
@@ -503,7 +506,7 @@ HREF="overview.html">"Overview of CUPS"</A> document instead.</P>
 
 
 	<DT>CUPS Imaging API</DT>
-	<DD><OL START="91">
+	<DD><OL START="92">
 
 		<LI><EM>Image API;</EM> The new image API
 		provides access to image files of arbitrary size
@@ -519,7 +522,7 @@ HREF="overview.html">"Overview of CUPS"</A> document instead.</P>
 	</OL></DD>
 
 	<DT>Scripting Support</DT>
-	<DD><OL START="93">
+	<DD><OL START="94">
 
 		<LI><EM>PHP Bindings;</EM> The PHP language
 		bindings have been revamped to be more consistent
