@@ -46,7 +46,8 @@ MAN5	=	classes.conf.$(MAN5EXT) \
 		cupsd.conf.$(MAN5EXT) \
 		mime.convs.$(MAN5EXT) \
 		mime.types.$(MAN5EXT) \
-		printers.conf.$(MAN5EXT)
+		printers.conf.$(MAN5EXT) \
+		subscriptions.conf.$(MAN5EXT)
 MAN7	=	backend.$(MAN7EXT) \
 		filter.$(MAN7EXT)
 MAN8	=	accept.$(MAN8EXT) \
